--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,9 +5,8 @@
 }
 
 body {
-  font: Arial, Helvetica, sans-serif;
-  background: #222;
-  color: white;
+  font: 16px "Helvetica Neue", Arial, sans-serif;
+  color: #121214;
 }
 
 //
