finishing githubexplorer module

--- a/src/styles/repositories.scss
+++ b/src/styles/repositories.scss
@@ -9,9 +9,10 @@ section.repository-list {
     list-style: none;
 
     li {
-      & + li {
-        margin-bottom: 20px;
-      }
+      background: #dedede;
+      padding: 20px;
+      border-radius: 4px;
+      margin-bottom: 20px;
 
       p {
         font-size: 14px;
